[package]
name = "Rust-simple-logger"
version = "0.1.0"
edition = "2024"

[dependencies]
deser = "0.8.0"
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
json = "0.12.4"
serde_json = "1.0.140"
chrono = "0.4.41"
once_cell = "1.21.3"
tokio = { version = "1.31", features = ["full"] }